--- a/web/index.html
+++ b/web/index.html
@@ -31,8 +31,11 @@
 
   <title>recetas360</title>
   <link rel="manifest" href="manifest.json">
+
+  <meta name="google-signin-client_id" content="339068374356-06em13av956i7te65veu45t7ou7a1c8s.apps.googleusercontent.com">
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
+  <script src="flutter.js" defer></script>
 </body>
 </html>
